cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED True)
project(particles)
include_directories("${PROJECT_SOURCE_DIR}")
file(GLOB SOURCES "*.cpp")
add_executable(particles ${SOURCES})
#add_executable(particles main.cpp)
#target_compile_features(particles INTERFACE cxx_std_17)
target_include_directories(particles PUBLIC "${PROJECT_SOURCE_DIR}" "${PROJECT_BINARY_DIR}")
add_subdirectory(range-v3)
target_link_libraries(particles PUBLIC range-v3)
